few tests - dmesg-warn/dmesg-fail/incomplete/abort - *ERROR* * reset request timed out: {request: 00000001, RESET_CTL: 00000001}
https://intel-gfx-ci.01.org/tree/drm-tip/IGT_6410/fi-bsw-cyan/igt@i915_selftest@live@hangcheck.html
<6> [699.709148] i915_reset_engine(vcs0:others-priority): 244 resets
<6> [700.220350] i915_reset_engine(vecs0:others-priority): 263 resets
<5> [700.557754] i915 0000:00:02.0: [drm] Resetting vcs0 for preemption time out
<3> [700.558481] i915 0000:00:02.0: [drm] *ERROR* vcs0 reset request timed out: {request: 00000001, RESET_CTL: 00000001}
<6> [700.559795] i915 0000:00:02.0: [drm] GPU HANG: ecode 8:4:bffffffe
<7> [704.458696] i915 0000:00:02.0: [drm:intel_dp_detect [i915]] [CONNECTOR:107:eDP-1]
<7> [704.460757] i915 0000:00:02.0: [drm:intel_dp_detect [i915]] [CONNECTOR:95:DP-1]
<7> [704.462857] i915 0000:00:02.0: [drm:intel_hdmi_detect [i915]] [CONNECTOR:102:HDMI-A-1]
<7> [704.464708] i915 0000:00:02.0: [drm:intel_dp_detect [i915]] [CONNECTOR:114:DP-2]
<7> [704.466565] i915 0000:00:02.0: [drm:intel_hdmi_detect [i915]] [CONNECTOR:118:HDMI-A-2]
<0> [710.090780] Dumping ftrace buffer:
<0> [710.090821] ---------------------------------
<0> [710.091321] CPU:3 [LOST 1715262 EVENTS]
<...>-6395 3..... 698544796us : __i915_request_commit: 0000:00:02.0 vecs0: fence b646:86, current 84
<0> [710.091689] <...>-6395 3d.s2. 698544835us : __i915_request_submit: 0000:00:02.0 vecs0: fence b646:86, current 84
<0> [710.092031] <...>-6395 3d.s1. 698544842us : execlists_submission_tasklet: 0000:00:02.0 vecs0: context:b646 schedule-in, ccid:20
<0> [710.092300] <...>-6395 3d.s1. 698544846us : trace_ports: 0000:00:02.0 vecs0: submit { ccid:20 b646:86 prio 0 }
<0> [710.092534] <...>-6395 3..... 698545137us : __intel_context_do_pin_ww: 0000:00:02.0 vecs0: context:b648 active
<0> [710.092764] <...>-6395 3..... 698545158us : __intel_context_do_pin_ww: 0000:00:02.0 vecs0: context:b648 pin ring:{start:0008f000, head:0e00, tail:0e30}
<0> [710.093011] <...>-6395 3..... 698545224us : __i915_request_commit: 0000:00:02.0 vecs0: fence b648:86, current 84
<0> [710.093259] <...>-6395 3d.s2. 698545275us : __i915_request_submit: 0000:00:02.0 vecs0: fence b648:86, current 84
<0> [710.093495] <...>-6395 3d.s1. 698545283us : execlists_submission_tasklet: 0000:00:02.0 vecs0: context:b648 schedule-in, ccid:20
<0> [710.093726] <...>-6395 3d.s1. 698545286us : trace_ports: 0000:00:02.0 vecs0: submit { ccid:20 b648:86 prio 0 }
<0> [710.093954] <...>-6395 3..... 698545320us : __intel_context_do_pin_ww: 0000:00:02.0 vecs0: context:b64c active
<0> [710.094183] <...>-6395 3..... 698545340us : __intel_context_do_pin_ww: 0000:00:02.0 vecs0: context:b64c pin ring:{start:000a2000, head:0e00, tail:0e30}
<0> [710.094432] <...>-6395 3..... 698545384us : __i915_request_commit: 0000:00:02.0 vecs0: fence b64c:86, current 84
<0> [710.094659] <...>-6395 3..... 698545463us : __intel_context_do_pin_ww: 0000:00:02.0 vecs0: context:b64e active
<0> [710.094887] <...>-6395 3..... 698545482us : __intel_context_do_pin_ww: 0000:00:02.0 vecs0: context:b64e pin ring:{start:000a5000, head:0e00, tail:0e30}
<0> [710.095132] <...>-6395 3..... 698545526us : __i915_request_commit: 0000:00:02.0 vecs0: fence b64e:86, current 84
<0> [710.095387] <...>-6395 3..... 698545602us : __intel_context_do_pin_ww: 0000:00:02.0 vecs0: context:b64f active
<0> [710.095650] <...>-6395 3..... 698545622us : __intel_context_do_pin_ww: 0000:00:02.0 vecs0: context:b64f pin ring:{start:000a6000, head:0e00, tail:0e30}
<0> [710.095896] <...>-6395 3..... 698545678us : __i915_request_commit: 0000:00:02.0 vecs0: fence b64f:86, current 84